# airbus-quantum-tgv-solver

./: .gitignore  FINALIZE_AIRBUS_PROJECT.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
configs/: base.yaml  re10.yaml  re100.yaml  sweep.yaml
docs/: DECISIONS.md  PROJECT_PLAN.md
docs/physics_notes/: tgv_exact_solution.md
experiments/aero_demo/: README.md  generate_aero_visuals.py
notebooks/: demo_taylor_green_vortex.ipynb
reports/: final_report.md
results/benchmarks/: benchmark_results.csv  benchmark_results.json
scripts/: final_check.py  generate_visuals.py  sweep.py
src/tgv/: __init__.py  analytical.py  visualization.py
src/tgv/benchmark/: __init__.py  metrics.py  plots.py
src/tgv/classical/: __init__.py  spectral_solver.py
src/tgv/quantum/: __init__.py  backend.py  collision.py  d2q9.py  encoding.py  solver.py  streaming.py
tests/: test_analytical.py  test_collision.py  test_encoding.py  test_qlbm_full.py  test_spectral.py  test_streaming.py
