[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "airbus-quantum-tgv-solver"
version = "0.4.0"
description = "Hybrid quantum-classical QLBM solver for the 2D Convecting Taylor-Green Vortex benchmark."
requires-python = ">=3.11"
authors = [
  {name = "Benjamin Charles Brümm"},
  {name = "Vidhi Jain"},
]
license = {text = "MIT"}
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "matplotlib==3.9.0",
    "qiskit==1.2.4",
    "qiskit-aer==0.14.2",
    "qiskit-ibm-runtime==0.26.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "pandas==2.2.2",
    "h5py==3.11.0",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
